fixing spacing, minimizing font, adding longer textbox for cover letter

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -313,7 +313,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
-  height: 230px;
+  /* height: 230px; */
 }
 
 .statsSectionMobile {
@@ -348,6 +348,26 @@
   color: var(--color-gray-300);
   font-family: var(--font-jetbrains-mono);
   position: relative;
+}
+
+.appSectionLonger {
+  border-radius: 20px;
+  background-color: var(--color-gray-400);
+  height: 620px;
+  flex-shrink: 0;
+  flex-direction: column;
+  padding: 54px 49px;
+  align-items: flex-end;
+  gap: 31px;
+  text-align: center;
+  font-size: var(--font-size-sm);
+  color: var(--color-gray-300);
+  font-family: var(--font-jetbrains-mono);
+  position: relative;
+  align-self: stretch;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
 }
 
 .uploadWrapper,
@@ -577,7 +597,7 @@
 
 .resultJobDescriptionMobile {
   margin-top: 100px;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .textAreaContainer {
